[package]
name = "web3_hd"
version = "0.1.0"
edition = "2021"
authors = ["Nazgull08 <nazgull08@gmail.com>"]
description = "web3_hd is a library for working with the hierarchical deterministic web3 wallets"
license = "Apache-2.0"
repository = "https://github.com/nazgull08/web3-hd"
keywords = ["web3", "wallet", "hd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web3_hd"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
log = "0.4.17"
web3 = "0.18.0"
ethkey = { dir = "/home/nazgul/teaspot/eth-crypto/ethkey"}
