[package]
name = "web3_hd"
version = "0.1.0"
edition = "2021"
authors = ["Nazgull08 <nazgull08@gmail.com>"]
description = "web3_hd is a library for working with the hierarchical deterministic web3 wallets"
license = "Apache-2.0"
repository = "https://github.com/nazgull08/web3-hd"
keywords = ["web3", "wallet", "hd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web3_hd"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
log = "0.4.17"
web3 = "0.18.0"
ethkey = { dir = "/home/nazgul/teaspot/eth-crypto/ethkey"}
hex = "0.4.3"
rand = { version="0.7"} # need 0.7 for eth-keystore to work ok. Might change in future versions ofc.
eth-keystore = "0.2.1"
tiny-bip39 = "0.8.0"
secp256k1 = "0.27.0"
bitcoin = "0.30.0"
sha3 = "0.9.1"
eth_checksum = "0.1.2"
hex-literal = "0.4.1"
sha256 = "1.1.3"
